tests/pos/todo/simple/bool-00.ts

/*@ simple :: () => { v:boolean | (Prop([v])) } */
export function simple() {
  return (0 < 1);
}
