tests/neg/simple/06-bool.ts

/*@ simple :: () => { v:boolean | Prop v } */
function simple() {
    return (0 === 1);
}
